# dijkfood-cloud-comp-A1

./: .dockerignore  .gitignore  LICENSE  README.md  check_health.py  clear_data_only.py  deploy.py  deploy_copy.py  deploy_infra.py  deploy_output.json  deploy_simuladores.py  destroy.py  docker-compose.yml  isolation_test.py  pyproject.toml  redeploy_all.ps1  run_benchmark.py  seed_aws_demo.py  test_infra.py
carga_unitario/: .env  __main__.py  combo.json  fluxo.py  fluxo_config.json  metrics.py  payloads.py  runner.py  scenarios.py
database/: DDL.sql  Dockerfile  deploy.py  main.py  models.py  monitor.py  seed_cadastro_once.py  seed_db.py  simulador_cadastro.py  simulador_cadastro_2.py
demo-ui/: .env  .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
demo-ui/src/: App.tsx  main.tsx  vite-env.d.ts
dynamo/: Dockerfile  api.py  chaos_test.py  deploy.py  destroy.py  models.py  repository.py  setup_db.py  simulador_pedidos.py  simulador_pedidos_2.py
general_api/: Dockerfile  api.py  models.py
infra/: deploy.py  run_benchmark.py
route_service/: Dockerfile  api.py  benchmark_api.py  benchmark_docker.py  deploy.py  download_graph.py  models.py  setup.py
simulador/: Dockerfile  config.py  http_client.py  main.py  metrics.py  pedido.py  populacao.py
simulador_ecs/: README.md  config.json  dashboard_carga.py  deploy_simulador.py  simulador_output.json
simulador_entregadores/: Dockerfile  main.py  models.py
simulador_pedidos/: Dockerfile  main.py
simulador_restaurante/: main.py  models.py
(+46 files in other folders)
