[project]
name = "dijkfood-cloud-comp-a1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.79",
    "faker>=40.12.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "osmnx>=2.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "rustworkx>=0.17.1",
    "scipy>=1.17.1",
    "uvicorn>=0.42.0",
]
